deploy: c5848ad23f656d2e2ce48510c960553dc6422fa2

--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@ versions.</p>
 </li>
 <li>
 <p>Down the latest <a href="https://github.com/bundabrg/GeyserReversion/releases">GeyserReversion</a> and place it inside your Geyser extensions folder. Note this is
-a folder 'extensions' underneath your Geyser folder. If you are running a extension version of Geyser (Spigot/Bungeecord/Velocity)  then
-make sure to place it inside the <code>extensions/Geyser/extensions</code> folder. Standalone verison of Geyser will be a <code>extensions</code> folder
+a folder 'extensions' underneath your Geyser folder. If you are running a plugin version of Geyser (Spigot/Bungeecord/Velocity)  then
+make sure to place it inside the <code>plugins/Geyser/extensions</code> folder. Standalone verison of Geyser will be a <code>extensions</code> folder
 where your Geyser.jar file is located.</p>
 </li>
 <li>
