deploy: 3b6650379445c7158ca23a803057e7dd502c9abb

--- a/index.html
+++ b/index.html
@@ -472,6 +472,8 @@ help others. I appreciate your contribution, and I thank you for giving me the a
 as well.</p>
 <ul>
 <li>Bitcoin: <code>bc1q0twm860q6qtr4aaje4xqaft2zumsxdh37k04u5</code></li>
+<li>Dogecoin: <code>DJspj5eK7ZjbDdPjVf1qZUGi3e8Gao79xT</code></li>
+<li>Litecoin: <code>ltc1q23yqxgwn60rjlwdhpnwtzjyk9rw3rmmzy4qm3x</code></li>
 </ul>
                 
               
